@@ -3,6 +3,7 @@ ncmpc 0.50 - not yet released
 * require libfmt 9
 * draw progress bar as Unicode double line
 * add color style "text" for input text controls
+* remove option "text-editor-ask"
 * lyrics/musixmatch: add new lyrics extension
 * lyrics/google: fix partial loading of lyrics
 
